fix(dropdown): multiselect clear icon visibility fix

--- a/src/components/reusable/dropdown/dropdown.scss
+++ b/src/components/reusable/dropdown/dropdown.scss
@@ -178,7 +178,7 @@ slot[name='icon']::slotted(*) {
   align-items: center;
   justify-content: space-between;
   border: none;
-  width: 24px;
+  width: 48px;
   height: 24px;
   padding: 8px;
   border-radius: 4px;
